# 2d-shooter

./: CMakeLists.txt  README.md  sonar-project.properties
include/: ICollider.h  ICombatBehaviour.h  IDrawable.h  IGameRules.h  IKeyboardMovement.h  IKillable.h  IMoveable.h  IUpdatable.h
src/: CMakeLists.txt  Game.cpp  Game.h  GameRules.cpp  GameRules.h  main.cpp
src/bullets/: Bullet.cpp  Bullet.h
src/bullets/enemyBullet/: EnemyBullet.cpp  EnemyBullet.h
src/bullets/playerBullet/: PlayerBullet.cpp  PlayerBullet.h
src/entities/: Entity.cpp  Entity.h
src/entities/enemy/: Enemy.cpp  Enemy.h
src/entities/player/: Player.cpp  Player.h
src/movement/: WASDMovement.cpp  WASDMovement.h
src/utils/: Collider.cpp  Collider.h  CursorDirectionCalculator.cpp  CursorDirectionCalculator.h  EnemyFactory.h  EntityDirectionCalculator.cpp  EntityDirectionCalculator.h  EntityFactory.h  PlayerFactory.h
test/: CMakeLists.txt  EntitiesShouldNotCollide.cpp  EntityShouldCollideWithBullet.cpp  EntityShouldCreateBullet.cpp  EntityShouldMove.cpp  PlayerFactoryShouldCreatePlayer.cpp
